# Resistome-Navigator

./: .dockerignore  .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  Dockerfile  FILE_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION.md  QUICKSTART.md  README.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  check.py  create_tables.py  environment.yml  frontend_diff.patch  mock.fasta  module2_input.csv  pyproject.toml  requirements.txt  scaffold.js  start_platform.bat  test_1_genome.py  test_7_genomes.py  test_batch_upload.py  test_import.py  test_ingestion.py  test_join.nf  test_opt.nf
.github/workflows/: ci.yml
.nextflow/: history
alembic/: env.py
alembic/versions/: 6baba234d086_add_virulence_status_to_sample.py  80cff0f3dfab_initial_schema.py  add_genome_validation.py
backend/: __init__.py  alembic.ini  celery_app.py  celery_config.py  check_db.py  cli.py  cohort_mock.json  generate_large_mock.py  generate_rules.py  main.py  main_mvp.py  response.json  test_algorithms_demo.py  test_db_demo.py  test_engine_demo.py  test_phenotype_demo.py  test_real_databases.py  test_virulence_demo.py
backend/alembic/: env.py
backend/algorithms/: __init__.py
backend/alignment/: __init__.py  base.py  (+3 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
nextflow/: main.nf  nextflow.config
r_dashboard/: app.R
scripts/: setup_databases.py
test_data/: test.fasta
(+251 files in other folders)
